feat: Ajustes de contrato con el front
